@@ -186,9 +186,10 @@ stage_three do
     gsub_file 'Gemfile', /.*gem 'haml2slim'\n/, "\n"
     gsub_file 'Gemfile', /.*gem 'html2haml'\n/, "\n"
   end
-  # remove gems used to assist rails_apps_composer
+  # remove gems and files used to assist rails_apps_composer
   gsub_file 'Gemfile', /.*gem 'rails_apps_pages'\n/, ''
   gsub_file 'Gemfile', /.*gem 'rails_apps_testing'\n/, ''
+  remove_file 'config/railscomposer.yml'
   # remove commented lines and multiple blank lines from Gemfile
   # thanks to https://github.com/perfectline/template-bucket/blob/master/cleanup.rb
   gsub_file 'Gemfile', /#.*\n/, "\n"
