@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.39"
+  VERSION = "3.0.40"
 end
